<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.neymar.bluetooth18.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <!--客户端按钮-->
        <Button
            android:id="@+id/human"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/sendServer"
            android:onClick="sendServer"
            />
        <!--服务端按钮-->
        <Button
            android:id="@+id/accept"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/server"
            android:onClick="acceptServer"
            />
        <!--断开连接按钮-->
        <Button
            android:id="@+id/removeconnedted"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/removeconnedted"
            android:onClick="removeConnecrer"
            />
        <!--返回按钮-->
        <Button
            android:id="@+id/goBackMain"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/goBackMain"
            android:onClick="goBackMian"/>
    </LinearLayout>
    <!--返回主菜单-->
    <!--聊天面板 -->
    <RelativeLayout
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/chat_panel"
        android:layout_marginTop="50dp"
        >

        <!-- 聊天按钮 -->
        <Button
            android:id="@+id/bt_send"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/send"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:onClick="sendMessage"
            />

        <!-- 聊天输入框 -->
        <EditText
            android:id="@+id/chat_send"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <!-- 聊天对话框 -->
        <TextView
            android:id="@+id/chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bt_send"
            />
    </RelativeLayout>

</RelativeLayout>