<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.neymar.bluetooth18.BlueToothConnect">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ProgressBar
            android:id="@+id/can_look_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:indeterminateTint="@color/lightgrey"
            android:visibility="invisible"
            />
        <!--打开蓝牙可见-->
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/open_blue_tooth"
            android:onClick="openBlueToothLook"
            android:layout_marginRight="20dp"
            />
        <!--返回主菜单-->
        <Button
            android:id="@+id/goBackMain"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/goBackMain"
            android:onClick="goBackMian"/>

    </LinearLayout>
    <!--设备信息 -->
    <RelativeLayout
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="60dp"
        android:id="@+id/chat_panel"
        >
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="50dp">
            <!-- 查找设备信息 -->
            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/find_blue_tooth"
                android:onClick="findBlueToothCanLook"/>
            <ProgressBar
                android:id="@+id/find_look_bar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:indeterminateTint="@color/lightgrey"
                android:visibility="invisible"
                />
        </LinearLayout>
        <!-- 显示设备信息 -->
        <ListView
            android:id="@+id/findBlueTooth"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:divider="#e90423"
            android:dividerHeight="1px"
            />
            <!--android:layout_alignParentBottom="true"-->

        <!-- 查看已连接设备信息 -->
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="200dp"
            android:text="@string/havefind_blue_tooth"
            android:onClick="haveFindBlueToothCanLook"/>
            />
        <!-- 显示已连接设备信息 -->
        <ListView
            android:id="@+id/connectBlueTooth"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:divider="#e90423"
            android:dividerHeight="1px"
            />
    </RelativeLayout>


</RelativeLayout>